# urdf_editor

./: CMakeLists.txt  README.md  actionhandler.cpp  actionhandler.h  base_setting.cpp  base_setting.h  base_setting.ui  camera.cpp  camera.h  codemaker.cpp  codemaker.h  collapsiblewidget.cpp  collapsiblewidget.h  collapsiblewidget.ui  enoperational.cpp  enoperational.h  geometry_choose.cpp  geometry_choose.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mesh.cpp  mesh.h  meshgenerator.cpp  meshgenerator.h  param_struct.h  property.cpp  property.h  property.ui  property2.cpp  property2.h  property2.ui  res.qrc  shape.cpp  shape.h  shape_relation.cpp  shape_relation.h  shape_relation.ui  shapemanager.cpp  shapemanager.h  (+3 more)
not_used/: collapsiblewidget.ui  geometry_choose.ui  property2.h
qss/: blue.qss  dark.qss  light.qss
shaders/: axis.frag  axis.vert  select.frag  select.vert  shapes.frag  shapes.vert
